--- a/GlobalGameJam2025_Bubbles/appsettings.json
+++ b/GlobalGameJam2025_Bubbles/appsettings.json
@@ -6,5 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-  "MaxGameDays": 14
+  "MaxGameDays": 14,
+  "OpenAIEndpoint": "https://openai-ggj2025.openai.azure.com/",
+  "OpenAIDeploymentName": "gpt-4"
 }
