--- a/GlobalGameJam2025_Bubbles/GlobalGameJam2025_Bubbles.csproj
+++ b/GlobalGameJam2025_Bubbles/GlobalGameJam2025_Bubbles.csproj
@@ -6,4 +6,8 @@
         <ImplicitUsings>enable</ImplicitUsings>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Azure.AI.OpenAI" Version="2.1.0" />
+    </ItemGroup>
+
 </Project>
