--- a/GlobalGameJam2025_Bubbles/GlobalGameJam2025_Bubbles.csproj
+++ b/GlobalGameJam2025_Bubbles/GlobalGameJam2025_Bubbles.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
       <PackageReference Include="Azure.AI.OpenAI" Version="2.1.0" />
+      <PackageReference Include="BlazorApplicationInsights" Version="3.1.0" />
     </ItemGroup>
 
 </Project>
