--- a/GlobalGameJam2025_Bubbles/GlobalGameJam2025_Bubbles.csproj
+++ b/GlobalGameJam2025_Bubbles/GlobalGameJam2025_Bubbles.csproj
@@ -12,4 +12,12 @@
       <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.22.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <None Include="Web.config">
+        <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+      </None>
+    </ItemGroup>
+
 </Project>
