activate redirect for prod env olny

--- a/GlobalGameJam2025_Bubbles/Web.config
+++ b/GlobalGameJam2025_Bubbles/Web.config
@@ -9,6 +9,7 @@
                     <conditions>
                         <add input="{HTTP_HOST}" pattern="^(?!.*azurewebsites\.net).*" />
                         <add input="{APPSETTING_REDIRECT_DOMAIN}" pattern=".+" />
+                        <add input="{APPSETTING_ASPNETCORE_ENVIRONMENT}" pattern="^Production$" />
                     </conditions>
                     <action type="Redirect" url="https://{APPSETTING_REDIRECT_DOMAIN}/{R:1}" redirectType="Permanent" />
                 </rule>
