--- a/GlobalGameJam2025_Bubbles/Web.config
+++ b/GlobalGameJam2025_Bubbles/Web.config
@@ -7,7 +7,7 @@
                 <rule name="Redirect to new domain" stopProcessing="true">
                     <match url="(.*)" />
                     <conditions>
-                        <add input="{HTTP_HOST}" pattern="^(?!.*azurewebsites\.net).*" />
+                        <add input="{HTTP_HOST}" pattern="azurewebsites\.net$" ignoreCase="true"  />
                         <add input="{APPSETTING_REDIRECT_DOMAIN}" pattern=".+" />
                         <add input="{APPSETTING_ASPNETCORE_ENVIRONMENT}" pattern="^Production$" />
                     </conditions>
