--- a/GlobalGameJam2025_Bubbles/Web.config
+++ b/GlobalGameJam2025_Bubbles/Web.config
@@ -3,15 +3,20 @@
     <system.webServer>
         <rewrite>
             <rules>
-                <!-- Redirect everything except azurewebsites.net -->
-                <rule name="Redirect to new domain" stopProcessing="true">
+                <rule name="Redirect from Azure domain to custom domain" stopProcessing="true">
                     <match url="(.*)" />
-                    <conditions>
-                        <add input="{HTTP_HOST}" pattern="azurewebsites\.net$" ignoreCase="true"  />
+                    <conditions logicalGrouping="MatchAll">
+                        <!-- 1. Match subdomain.azurewebsites.net -->
+                        <add input="{HTTP_HOST}" pattern=".*\.azurewebsites\.net$" ignoreCase="true" />
+                        <!-- 2. Confirm that the environment variable is set (optional) -->
                         <add input="{APPSETTING_REDIRECT_DOMAIN}" pattern=".+" />
+                        <!-- 3. Production check (optional) -->
                         <add input="{APPSETTING_ASPNETCORE_ENVIRONMENT}" pattern="^Production$" />
                     </conditions>
-                    <action type="Redirect" url="https://{APPSETTING_REDIRECT_DOMAIN}/{R:1}" redirectType="Permanent" />
+                    <action
+                            type="Redirect"
+                            url="https://{APPSETTING_REDIRECT_DOMAIN}/{R:1}"
+                            redirectType="Permanent" />
                 </rule>
             </rules>
         </rewrite>
