DeepSeek API Implementation Switching LLM API via Strategy Pattern

--- a/GlobalGameJam2025_Bubbles/appsettings.json
+++ b/GlobalGameJam2025_Bubbles/appsettings.json
@@ -7,6 +7,9 @@
   },
   "AllowedHosts": "*",
   "MaxGameDays": 10,
+  "LlmType": "DeepSeek",
   "OpenAIEndpoint": "https://openai-ggj2025.openai.azure.com/",
-  "OpenAIDeploymentName": "gpt-4"
+  "OpenAIDeploymentName": "gpt-4",
+  "DeepSeekEndpoint": "https://api.deepseek.com",
+  "DeepSeekModel": "deepseek-chat"
 }
